Registro de mantenimientos

--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -95,7 +95,7 @@
         </a>
     </div>
     <div class="col-md-3 mb-2">
-        <a href="#" class="btn btn-outline-secondary w-100 py-3 shadow-sm">
+        <a href="{{ url_for('mantenimiento.nuevo_registro') }}" class="btn btn-outline-secondary w-100 py-3 shadow-sm">
             <i class="fa-solid fa-wrench fa-2x mb-2"></i><br>Mantenimiento
         </a>
     </div>
