Gestion de condominos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('finanzas.historial') }}"><i class="fa-solid fa-money-bill"></i> Finanzas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-users"></i> Condóminos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{{ url_for('condominos.lista_departamentos') }}"><i class="fa-solid fa-users"></i> Condóminos</a></li>
                     <li class="nav-item"><a class="nav-link" href="{{ url_for('mantenimiento.inventario') }}"><i class="fa-solid fa-screwdriver-wrench"></i> Mantenimiento</a></li>
                     <li class="nav-item"><a class="nav-link" href="#"><i class="fa-solid fa-gear"></i> Config</a></li>
                 </ul>
