--- a/app/templates/finanzas/nuevo_ingreso.html
+++ b/app/templates/finanzas/nuevo_ingreso.html
@@ -40,7 +40,7 @@
                         </div>
                         <div class="col-md-6 mb-3">
                             <label class="form-label">Fecha Real del Pago</label>
-                            {{ form.fecha(class="form-control", type="date") }}
+                            {{ form.fecha_pago(class="form-control", type="date") }}
                         </div>
                     </div>
 
