--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -90,7 +90,7 @@
         </a>
     </div>
     <div class="col-md-3 mb-2">
-        <a href="#" class="btn btn-outline-dark w-100 py-3 shadow-sm">
+        <a href="{{ url_for('finanzas.nueva_transferencia') }}" class="btn btn-outline-dark w-100 py-3 shadow-sm">
             <i class="fa-solid fa-money-bill-transfer fa-2x mb-2"></i><br>Transferencia
         </a>
     </div>
