--- a/app/templates/finanzas/nuevo_ingreso.html
+++ b/app/templates/finanzas/nuevo_ingreso.html
@@ -51,7 +51,7 @@
 
                     <div class="d-grid gap-2">
                         {{ form.submit(class="btn btn-success btn-lg") }}
-                        <a href="{{ url_for('main.dashboard') }}" class="btn btn-outline-secondary">Cancelar</a>
+                        <a href="{{ url_for('finanzas.historial') }}" class="btn btn-outline-secondary">Cancelar</a>
                     </div>
                 </form>
             </div>
